3.8 labs, samt fixade problemet med whitespace och inline-block

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,8 @@
     5.2 - Forms
     5.3 - Typography
     5.4 - Articles
+    5.5 - Sections
+    5.6 - Lists
     6.0 - Footer
 */
 
@@ -73,6 +75,7 @@ table {
 {
     max-width: 1200px;
     margin: auto;
+    font-size: 0;
 }
 
 header
@@ -80,17 +83,7 @@ header
     width: 100%;
 }
 
-body
-{
-    box-sizing: border-box;
-}
 
-/*
-    Om main och nav tillsammans upptar 100% flyttas main ner, detta händer tydligen för att whitespace räknas med för inline element. Enda lösningen är font-size:0 på container och därefter återställa font-size överallt.
-    Problemet kan också lösas genom att istället göra layouten med floats.
-    
-    Så som jag vill färgsätta spelar det dock ingen större roll.
-*/
 
 nav
 {
@@ -104,7 +97,7 @@ main
 {
     display: inline-block;
     vertical-align: top;
-    width: 81%;
+    width: 82%;
 }
 
 footer
@@ -164,6 +157,12 @@ article
     background-color: #fff5ef;
 }
 
+th, tfoot
+{
+    background-color: #ffae40;
+}
+
+
 /* 3.0 Header --------------------------------------------------------------------------------------------------------------------------------------------------------- */
 header>img
 {
@@ -200,6 +199,11 @@ nav>ul>li>a
 table,th,td
 {
 border: 1px solid #000000;
+}
+
+td
+{
+    padding: 5px;
 }
 
 /* 5.2 Forms --------------------------------------------------------------------------------------------------------------------------------------------------------- */
@@ -255,7 +259,7 @@ h6
     line-height: 27px;
 }
 
-p, body
+p, article, section, nav
 {
     font-size: 16px;
     line-height: 24px;
@@ -288,7 +292,7 @@ article>h2:before
 article
 {
     border-radius: 10px;
-    margin: 10px 0 10px 0;
+    margin: 10px;
     padding: 10px;
     overflow: hidden;
 }
@@ -306,7 +310,31 @@ article
     border: 2px solid #000000;
     margin: 15px;
 }
+/* 5.5 Sections --------------------------------------------------------------------------------------------------------------------------------------------------------- */
 
+section#results
+{
+    float: right;
+}
+
+section
+{
+    margin:10px;
+    padding: 10px;
+}
+
+/* 5.6 Lists --------------------------------------------------------------------------------------------------------------------------------------------------------- */
+
+dd 
+{
+    margin-left: 15px;
+}
+
+ol.numbered
+{
+    list-style-type: decimal;
+    margin-left: 25px;
+}
 
 /* 6.0 Footer --------------------------------------------------------------------------------------------------------------------------------------------------------- */
 
@@ -315,3 +343,8 @@ footer
     text-align: right;
     padding: 10px;
 }
+
+
+
+
+
